# cachelot

./: .gitignore  .hgignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  all_build.bat  all_build.sh  build.bat  build.sh  cleanup.bat  cleanup.sh  cmake_install.cmake  count_loc  new_header  readme.md  run_tests.bat  run_tests.sh
cmake/: cachelot-config.cmake.in  cahcelot-config.cmake.in
pkg/docker/alpine/: Dockerfile  Makefile  build_cachelotd.sh  release.Dockerfile
pkg/docker/ubuntu-clang-libstdcxx/: Dockerfile  run_cachelot_tests.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark_cache.cpp  benchmark_compression.cpp  benchmark_memalloc.cpp  cache_async_api_benchmark.cpp  cache_benchmark.cpp  cache_service_benchmark.cpp  memslap_benchmark.sh
src/cachelot/: CMakeLists.txt  actor.cpp  actor.h  async_connection.h  atom.h  bits.h  bytes.h  c_api.cpp  c_api.h  cache.cpp  cache.h  cache_api.h  cache_async_api.cpp  cache_async_api.h  cache_defs.h  cache_service.cpp  cache_service.h  cachelot.cpp  cachelot.h  common.cpp  common.h  config.h.in  debug_trace.h  dict.h  error.cpp  error.h  expiration_clock.h  hash_fnv1a.h  hash_table.h  intrusive_list.h  io_buffer.h  io_serialization.h  item.cpp  item.h  item_alloc.h  main.cpp  memalloc-impl.h  memalloc-inl.h  memalloc.cpp  memalloc.h  (+22 more)
src/server/: CMakeLists.txt  async_connection.h  compression.cpp  compression.h  conn_stream.h  datagram_server.h  io_buffer.h  io_serialization.h  main.cpp  network.h  server_local.h  server_tcp.h  server_udp.h  settings.cpp  settings.h  socket_datagram.h  socket_stream.h  stats.cpp  stream_connection.h  stream_server.h  tcp_server.h  unix_socket_server.h
src/server/memcached/: conversation.cpp  conversation.h  error.h  memcached.cpp  memcached.h  proto_ascii.cpp  proto_ascii.h  proto_binary.cpp  proto_binary.h  proto_defs.h  proto_text.h  servers.h
src/test/: memcached.py  memory_consumption.py  server_test.py
src/test_c_api/: CMakeLists.txt  test_c_api.c
src/unit_test/: CMakeLists.txt  test_actor.cpp  test_atom.cpp  test_bits.cpp  test_bytes.cpp  test_cache.cpp  test_cache_stats.cpp  test_dict.cpp  test_hash_table.cpp  test_intrusive_list.cpp  test_io_buffer.cpp  test_item.cpp  test_memalloc.cpp  test_mpsc_queue.cpp  test_pool_allocator.cpp  test_slice.cpp  test_stats.cpp  test_string_conv.cpp  unit_test.cpp  unit_test.h
test/: memcached.py  memory_consumption.py  server_test.py
